@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2014/11/23 14:18:03 schmonz Exp $
+# $NetBSD: Makefile,v 1.12 2015/01/31 12:19:55 wiz Exp $
 
 DISTNAME=		App-Sqitch-0.997
 PKGNAME=		p5-${DISTNAME}
@@ -42,7 +42,6 @@ DEPENDS+=		p5-Type-Tiny-[0-9]*:../../devel/p5-Type-Tiny
 DEPENDS+=		p5-Type-Tiny-XS>=0.010:../../devel/p5-Type-Tiny-XS
 DEPENDS+=		p5-URI-[0-9]*:../../www/p5-URI
 DEPENDS+=		p5-URI-db>=0.15:../../www/p5-URI-db
-DEPENDS+=		{perl>=5.004,p5-constant-[0-9]*}:../../devel/p5-constant
 DEPENDS+=		p5-namespace-autoclean>=0.16:../../devel/p5-namespace-autoclean
 DEPENDS+=		{perl>=5.10.1,p5-parent-[0-9]*}:../../devel/p5-parent
 DEPENDS+=		{perl>=5.9.3,p5-Pod-Simple>=1.41}:../../textproc/p5-Pod-Simple
